--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,16 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 40px;
   padding: 20px;
   color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 1.25em;
+  font: reithsans;
+  float: left;
+  text-transform: uppercase;
 }
 
 .App-intro {
